--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,21 @@
               <label for="usd_price">USD</label>
               <input type="number" min="0" name="usd_price">
             </div>
+            <div class="cont-input local-gradient">
+              <label for="local_price">
+                <div class="custom-select__wrapper">
+                  <div class="custom-select">
+                    <div class="custom-select__trigger">
+                      <span></span>
+                      <div class="arrow"></div>
+                    </div>
+                    <div class="custom-select__options" id="optionsConvertion">
+                    </div>
+                  </div>
+                </div>
+              </label>
+              <input type="number" min="0" name="local_price">
+            </div>
           </div>
         </div>
       </div>
